translation-tool/inputs/source_meta/objects/CommonDSSPayloadMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Node__c</fullName>
        <label>Parent Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>CommonDSSPayloadMapping</label>
    <pluralLabel>CommonDSSPayloadMappings</pluralLabel>
</CustomObject>